# Oxidizer

./: Cargo.toml  LICENCE  README.md  justfile  rustfmt.toml
crates/oxidizer_cli/: Cargo.toml
crates/oxidizer_cli/src/: build_system.rs  cli.rs  lib.rs  main.rs  tools.rs
crates/oxidizer_cli/src/commands/: analyze.rs  benchmark.rs  daemon.rs  mod.rs
crates/oxidizer_daemon/: Cargo.toml
crates/oxidizer_engine/: Cargo.toml
